--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>BoxBrasil Moving - Mudanças Residenciais e Comerciais</title>
-  <meta name="description" content="Soluções completas para mudanças residenciais e comerciais no Brasil e exterior. Especialistas em frete internacional, containers, armazenamento e atendimento personalizado.">
+  <meta name="description" content="Soluções completas para mudanças dos Estados Unidos para o Brasil. Especialistas em frete internacional, containers, armazenamento e atendimento personalizado.">
   <!-- Google Tag Manager -->
   <script>
   (function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
