--- a/index.html
+++ b/index.html
@@ -370,7 +370,7 @@
   <section class="banner" id="home">
     <div class="container banner-content">
       <h1>Sua Mudança com Segurança e Qualidade</h1>
-      <p>Oferecemos soluções completas para mudanças residenciais e comerciais, inclusive internacionais, com equipe especializada e atendimento personalizado.</p>
+      <p>Oferecemos soluções completas para sua mudança dos Estados unidos para o Brasil, com equipe especializada e atendimento personalizado.</p>
       <a href="https://wa.me/5533998484743" target="_blank" class="cta-button" id="whatsapp-btn" aria-label="Fale conosco pelo WhatsApp">Solicite um Orçamento</a>
     </div>
   </section>
